--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,8 +75,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Check Expo build
-        run: npx expo install --check
+      - name: Run build check
+        run: npm run build-check
 
   # Security Audit
   security-audit:
