feat: Complete app modernization and feed ranking system
Major Features Added:
- Push notification system with Sentry integration
- Feed ranking algorithm based on location, freshness, and engagement
- Location-aware content discovery
- Enhanced error tracking and monitoring

Database Updates:
- Feed ranking function with PostGIS integration
- Scale hardening migrations with performance indexes
- Final schema updates for consistency
- Archive of old conflicting migrations

Code Improvements:
- Removed public URL fallbacks for security
- Enhanced location permission handling
- Improved infinite scroll for messages and comments
- Better error handling and user feedback

UI Enhancements:
- Location toggle for ranked vs chronological feeds
- Feed status indicators and error displays
- Loading states and disabled button handling
- Responsive location controls

Security & Performance:
- Signed URL generation for file uploads
- Rate limiting for messages and posts
- Database-level content ranking
- Comprehensive error tracking

Breaking Changes:
- Migrated from private_messages to dm_messages
- Updated foreign key relationships
- Enhanced RLS policies and triggers

--- a/project/app.json
+++ b/project/app.json
@@ -18,29 +18,57 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.hoodly.app"
+      "bundleIdentifier": "com.hoodly.app",
+      "infoPlist": {
+        "UIBackgroundModes": ["remote-notification"]
+      }
     },
     "android": {
       "package": "com.hoodly.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#1a1a2e"
-      }
+      },
+      "permissions": [
+        "android.permission.RECEIVE_BOOT_COMPLETED",
+        "android.permission.VIBRATE",
+        "android.permission.WAKE_LOCK"
+      ]
     },
     "web": {
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/favicon.png"
     },
+    "notification": {
+      "icon": "./assets/notification-icon.png",
+      "color": "#1a1a2e",
+      "iosDisplayInForeground": true,
+      "androidMode": "default",
+      "androidCollapsedTitle": "New Notification"
+    },
     "plugins": [
       "expo-router",
       "expo-font",
       "expo-web-browser",
-      "expo-location"
+      "expo-location",
+      "expo-notifications",
+      "sentry-expo"
     ],
     "experiments": {
       "typedRoutes": true,
       "tsconfigPaths": true
+    },
+    "hooks": {
+      "postPublish": [
+        {
+          "file": "sentry-expo/upload-sourcemaps",
+          "config": {
+            "organization": "your-sentry-org",
+            "project": "your-sentry-project"
+          }
+        }
+      ]
     }
   }
 }
