--- a/env.example
+++ b/env.example
@@ -18,6 +18,9 @@ EXPO_PUBLIC_APP_NAME=Hoodly
 EXPO_PUBLIC_APP_VERSION=1.0.0
 EXPO_PUBLIC_APP_ENVIRONMENT=development
 
+# Sentry Error Tracking
+EXPO_PUBLIC_SENTRY_DSN=your_sentry_dsn_url
+
 # Feature Flags
 EXPO_PUBLIC_ENABLE_PUSH_NOTIFICATIONS=true
 EXPO_PUBLIC_ENABLE_LOCATION_FEATURES=true
