--- a/project/package.json
+++ b/project/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@sentry/react-native": "^6.19.0",
     "@supabase/supabase-js": "^2.50.5",
     "date-fns": "^4.1.0",
     "expo": "^53.0.19",
@@ -47,6 +48,7 @@
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
+    "sentry-expo": "^7.2.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
