--- a/project/package.json
+++ b/project/package.json
@@ -19,6 +19,7 @@
     "@sentry/react-native": "^6.19.0",
     "@supabase/supabase-js": "^2.50.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
     "expo": "^53.0.19",
     "expo-blur": "~14.1.3",
     "expo-camera": "~14.1.1",
@@ -26,15 +27,19 @@
     "expo-constants": "~17.1.3",
     "expo-font": "~13.2.2",
     "expo-haptics": "^14.1.4",
+    "expo-image": "~2.4.0",
     "expo-image-picker": "~15.0.6",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
-    "expo-location": "~18.1.1",
-    "expo-notifications": "~0.27.6",
+    "expo-localization": "^16.1.6",
+    "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.0.2",
     "expo-splash-screen": "~0.30.6",
     "expo-status-bar": "~2.2.2",
     "expo-system-ui": "~5.0.5",
+    "expo-task-manager": "~13.1.6",
+    "expo-updates": "^0.28.17",
     "expo-web-browser": "~14.1.5",
     "lucide-react-native": "^0.475.0",
     "react": "19.0.0",
